# openhalo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Project.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.codex/: hooks.json  run_hook.py
agent_guard/: __init__.py  codex_hooks.py
config/: llm-config.toml  runtime-config.example.toml
device_edge/: __init__.py  capability_runtime.py  cli_edge.py  host_daemon.py  host_observers.py  local_actions.py  runtime_control.py  session_client.py
docs/: android-edge-install.md  dev-env.md  edge-api.md  m17-android-edge-acceptance.md  runtime-deploy.md  terminal-tui.md
edge_api/: __init__.py  protocol.py
openhalo/: __init__.py  cli.py  edge_cli.py  home.py  release_manager.py  runtime_config_template.py  runtime_supervisor.py  version.py
openhalo_common/: __init__.py  diagnostics.py
personal_runtime/: __init__.py  action_layer.py  agent_executor.py  agent_harness.py  chain_inspection.py  context_contracts.py  context_snapshot.py  context_viewer.py  display_lifecycle.py  execution_planning.py  gateway_server.py  harness_evaluation.py  harness_memory.py  harness_provenance.py  hermes_adapter.py  interaction_pool.py  m18_replay.py  m18_replay_cli.py  main.py  managed_host_edge.py  mobile_liveness.py  model_provider.py  model_provider_probe.py  pairing_cli.py  pairing_store.py  presence_router.py  proactive_trigger_gate.py  prompt_context.py  prompt_replay.py  proposal_harness.py  proposal_harness_cli.py  protocol.py  runtime_console_presenter.py  runtime_memory.py  runtime_orchestrator.py  runtime_state.py  (+2 more)
(+163 files in other folders)
