[project]
name = "openhalo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12,<16",
    "textual",
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@e12626b34fb1024bf00f40f4759647f9cbd3f198",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "coverage>=7,<8",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_guard", "device_edge", "edge_api", "openhalo_common", "personal_runtime"]
